regression/fail/type.2.sml
type t = int
and t = real
